--- a/requirements_dev.txt
+++ b/requirements_dev.txt
@@ -1,9 +1,9 @@
-bentoml
-torchvision
-joblib
-tqdm
-pip-chill
-wincertstore
+bentoml==1.0.10
+torchvision==0.14.1
+joblib==1.2.0
+tqdm==4.64.1
+pip-chill==1.0.1
+wincertstore==0.2
 dvc
 mlflow
 ipykernel
@@ -19,6 +19,6 @@ mypy==0.971
 black==22.8.0
 
 
-#-e .
+-e .
 
 
